--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Login"
+            android:name=".Login_main"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -23,6 +23,12 @@
 
         <activity
             android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
+            android:name=".Login_interest"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
