--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'org.jetbrains:annotations-java5:15.0'
 
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    //appbar
+    implementation 'com.google.android.material:material:1.0.0'
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.github.eschao:android-ElasticListView:v1.0'
 
 }
