관심사 파이어 베이스 저장기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         </activity>
 
         <activity
-            android:name=".Login_interest"
+            android:name=".Login_category"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
