--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.github.eschao:android-ElasticListView:v1.0'
+    implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
 
 }
