--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,6 @@
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -42,11 +41,19 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
+        <activity android:name=".Chat.ChatActivity"/>
         <activity
             android:name=".Login_category"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
+        <activity android:name=".TripTalkView.TripTalkDistribution">
+        </activity>
+        <activity android:name=".TripTalkView.Board.Board_DetailView">
+        </activity>
+        <activity android:name=".TripTalkView.TripTalkBoard"/>
+        <activity android:name=".TripTalkView.Board.Board_NewWriteActivity"/>
 
         <activity
             android:name=".SNS.SNSSearchActivity"
