--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.material:material:1.1.0'
-
-
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     testImplementation 'junit:junit:4.12'
@@ -36,9 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'org.jetbrains:annotations-java5:15.0'
-
+    implementation files('libs/com.skt.Tmap_1.60.jar')
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-
+    implementation files('libs/minewBeaconScan.jar')
     //appbar
     implementation 'com.google.android.material:material:1.0.0'
     //Circle ImageView
